--- a/members/Makefile
+++ b/members/Makefile
@@ -1,6 +1,6 @@
 .PHONY: all, clean
 all:
-	webpack
+	node ./node_modules/webpack/bin/webpack.js
 
 clean:
 	rm -f cats.js content.js files.js posts.js preferences.js
